# counterfactual-estimation

./: .pre-commit-config.yaml  README.md  experiments.ipynb  pyproject.toml  run_crn.py
src/: crn.py
src/modules/: gradient_reversal.py
src/simulations/: non_small_lung_cancer.py
src/utils/: misc.py  tensor.py
src/utils/modules/: gradient_reversal.py  misc.py
