[project]
name = "counterfactual_estimation"
version = "0.1.0"
description = ""
authors = [
    {name = "Nghia Dai Nguyen", email = "nghiadn2@illinois.edu"},
]
dependencies = [
    "pydantic>=2.9.2", 
    "numpy>=2.1.3", 
    "torch>=2.5.1", 
    "scipy>=1.14.1", 
    "scikit-learn>=1.5.2", 
    "einops>=0.8.0", 
    "jaxtyping>=0.2.35", 
    "beartype>=0.19.0", 
    "matplotlib>=3.10.0", 
    "polars>=1.17.1", 
    "jupyter>=1.1.1", 
    "lightning>=2.5.0.post0", 
    "torchmetrics>=1.6.1", 
    "loguru>=0.7.3", 
    "wandb>=0.19.1"
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["F722", "F821"]

[tool.ruff.format]
quote-style = "single"